--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">HelloWorld</string>
     <string name="btn_show_toast">Get Some Toast</string>
     <string name="btn_submit">Submit</string>
-    <string name="btn_recycler_veiw">Go to Recycler View</string>
+    <string name="btn_recycler_veiw">Go to tasks</string>
     <string name="input_msg">Enter Msg For Next Activity</string>
 </resources>
